--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -108,7 +108,7 @@ p {
 	height: 3px;
 	margin-top: 20px;
 	margin-bottom: 30px;
-	background-color: #f4bc51;
+	background-color: #280071;
 }
 
 .left-banner-content .white-border-button {
@@ -117,7 +117,7 @@ p {
 
 .right-banner-content {
 	padding: 100px 45px;
-	background-color: #f4bc51;
+	background-color: #27137e
 	text-align: center;		
 	min-height: 680px;
 	height: 680px;
