--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -176,7 +176,7 @@ p {
 	background-color: #fff;
 	border-radius: 50%;
 	transition: all 0.5s;
-	color: #f4bc51;
+	color: #9EA2A2;
 	font-size: 17px;
 }
 
