--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -117,7 +117,7 @@ p {
 
 .right-banner-content {
 	padding: 100px 45px;
-	background-color: #27137e
+	background-color: #27137e;
 	text-align: center;		
 	min-height: 680px;
 	height: 680px;
