--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -377,7 +377,7 @@ p {
 }
 
 .event-list ul li .date span {
-	background-color: #f4bc51;
+	background-color: #FFE900;
 	width: 80px;
 	height: 80px;
 	text-align: center;
