--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -5,7 +5,6 @@ Avalon Template
 https://templatemo.com/tm-513-avalon
 
 */
-
 * {
     margin: 0;
     padding: 0;
@@ -1084,7 +1083,7 @@ footer p em {
 	}
 
 	.event-list ul li .date span {
-		background-color: #f4bc51;
+		background-color: #280071;
 		width: 100%;
 		height: 80px;
 		text-align: center;
