--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -13,7 +13,7 @@ https://templatemo.com/tm-513-avalon
 
 body {
 	overflow-x: hidden;
-	background-color: #fff;
+	background-color: #fcba35;
 }
 
 ul {
@@ -92,13 +92,13 @@ p {
 .left-banner-content h6 {
 	font-size: 14px;
 	font-weight: 700;
-	color: #fff;
+	color:#fc5a35;
 }
 
 .left-banner-content h1 {
 	font-size: 64px;
 	font-weight: 300;
-	color: #fff;
+	color:#fc5a35;
 	line-height: 70px;
 }
 
@@ -126,21 +126,21 @@ p {
 	font-size: 48px;
 	text-transform: uppercase;
 	font-weight: 700;
-	color: #fff;
+	color: #ffe900;
 	margin-bottom: 5px;
 }
 
 .right-banner-content .line-dec {
 	width: 100%;
 	height: 5px;
-	background-color: #fff;
+	background-color: #ffe900;
 	margin: 30px auto;
 }
 
 .right-banner-content span {
 	font-size: 14px;
 	text-transform: uppercase;
-	color: #fff;
+	color: #ffe900;
 	letter-spacing: 0.5px;
 }
 
@@ -323,7 +323,7 @@ p {
   width: 200px;
   height: 70px;
   line-height: 70px;
-  background-color: #fff;
+  background-color: #9ea2a2;
   cursor: pointer;
 }
 
