--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -92,7 +92,7 @@ p {
 .left-banner-content h6 {
 	font-size: 14px;
 	font-weight: 700;
-	color:#fc5a35;
+	color:#ffe900;
 }
 
 .left-banner-content h1 {
