--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -13,7 +13,7 @@ https://templatemo.com/tm-513-avalon
 
 body {
 	overflow-x: hidden;
-	background-color: #fcba35;
+	background-color: #ffe900;
 }
 
 ul {
@@ -92,13 +92,13 @@ p {
 .left-banner-content h6 {
 	font-size: 14px;
 	font-weight: 700;
-	color:#ffe900;
+	color:#9ea2a2;
 }
 
 .left-banner-content h1 {
 	font-size: 64px;
 	font-weight: 300;
-	color:#ffe900;
+	color:#9ea2a2;
 	line-height: 70px;
 }
 
@@ -126,21 +126,21 @@ p {
 	font-size: 48px;
 	text-transform: uppercase;
 	font-weight: 700;
-	color: #ffe900;
+	color: #9ea2a2;
 	margin-bottom: 5px;
 }
 
 .right-banner-content .line-dec {
 	width: 100%;
 	height: 5px;
-	background-color: #ffe900;
+	background-color: #9ea2a2;
 	margin: 30px auto;
 }
 
 .right-banner-content span {
 	font-size: 14px;
 	text-transform: uppercase;
-	color: #ffe900;
+	color: #9ea2a2;
 	letter-spacing: 0.5px;
 }
 
@@ -376,7 +376,7 @@ p {
 }
 
 .event-list ul li .date span {
-	background-color: #FFE900;
+	background-color: #9ea2a2;
 	width: 80px;
 	height: 80px;
 	text-align: center;
